Fix: move color palette containers
By moving color palette cotainers out of container it was in, this
allows it to behave independently and works better with desktop view.

--- a/styles.css
+++ b/styles.css
@@ -381,17 +381,6 @@ select {
     height: 112px;
     font-size: 1.125rem;
   }
-  
-  #colorPaletteTitle {
-	 padding-top: 7rem;
-  }
-  
-  #colorPaletteTitle,
-  .colorList {
-    position: relative;
-    bottom: -50%;
-    left: 50%;
-  }
 
   .main-footer .container {
     padding-top: 10rem;
